[gd_scene load_steps=21 format=2]

[ext_resource path="res://Assets/Fonts/m5x7.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Assets/Sprites/Sprite/RhythmResultBaa.png" type="Texture" id=2]
[ext_resource path="res://Assets/Shaders/Outline.tres" type="Material" id=3]
[ext_resource path="res://Assets/Codes/RhythmResults.gd" type="Script" id=4]
[ext_resource path="res://Assets/SFX/Shock.mp3" type="AudioStream" id=5]
[ext_resource path="res://Assets/SFX/No Hit.mp3" type="AudioStream" id=6]
[ext_resource path="res://Assets/SFX/Explosion.mp3" type="AudioStream" id=7]
[ext_resource path="res://Assets/Music/RhythmResults.mp3" type="AudioStream" id=8]
[ext_resource path="res://Assets/SFX/Notification.mp3" type="AudioStream" id=9]
[ext_resource path="res://Assets/SFX/Wooup.mp3" type="AudioStream" id=10]

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 172, 172 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 2 )
region = Rect2( 688, 0, 172, 172 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 2 )
region = Rect2( 516, 0, 172, 172 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 2 )
region = Rect2( 172, 0, 172, 172 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 2 )
region = Rect2( 344, 0, 172, 172 )

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ SubResource( 4 ) ],
"loop": true,
"name": "Default",
"speed": 5.0
}, {
"frames": [ SubResource( 5 ) ],
"loop": true,
"name": "Bad",
"speed": 5.0
}, {
"frames": [ SubResource( 6 ) ],
"loop": true,
"name": "Neutral",
"speed": 5.0
}, {
"frames": [ SubResource( 7 ), SubResource( 8 ) ],
"loop": false,
"name": "Good",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=2]
size = 32
outline_size = 2
outline_color = Color( 1, 0.203922, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=11]
size = 32
outline_size = 2
outline_color = Color( 1, 0.72549, 0, 1 )
extra_spacing_char = 4
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=10]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=1]
size = 32
outline_size = 2
font_data = ExtResource( 1 )

[node name="RhythmResults" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="BG" type="Polygon2D" parent="."]
position = Vector2( -102.4, 0 )
scale = Vector2( 1.4, 1 )
color = Color( 0, 0, 0, 1 )
polygon = PoolVector2Array( -64, 300, -32, 0, 576, 0, 544, 300 )

[node name="BG2" type="Polygon2D" parent="."]
color = Color( 0.054902, 0.0313726, 0.0980392, 1 )
polygon = PoolVector2Array( 40, 40, 40, 280, 472, 280, 472, 40 )

[node name="Baa" type="AnimatedSprite" parent="BG2"]
material = ExtResource( 3 )
position = Vector2( 384, 136 )
frames = SubResource( 9 )
animation = "Default"

[node name="MissCounter" type="Label" parent="BG2"]
anchor_left = 0.03125
anchor_top = 0.186667
anchor_right = 0.03125
anchor_bottom = 0.186667
margin_left = 64.0
margin_top = 88.0001
margin_right = 246.0
margin_bottom = 114.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 2 )
text = "Misses: 0"
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Timer" type="Timer" parent="BG2/MissCounter"]
wait_time = 0.05

[node name="HPCounter" type="Label" parent="BG2"]
anchor_left = 0.03125
anchor_top = 0.32
anchor_right = 0.03125
anchor_bottom = 0.32
margin_left = 64.0
margin_top = 128.0
margin_right = 246.0
margin_bottom = 154.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 2 )
text = "Tension: 0"
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Timer" type="Timer" parent="BG2/HPCounter"]
wait_time = 0.05

[node name="Rank" type="RichTextLabel" parent="BG2"]
anchor_left = 0.03125
anchor_top = 0.533333
anchor_right = 0.03125
anchor_bottom = 0.533333
margin_left = 64.0
margin_top = 192.0
margin_right = 472.0
margin_bottom = 218.0
rect_clip_content = false
custom_colors/default_color = Color( 1, 0.304688, 0, 1 )
custom_fonts/normal_font = SubResource( 11 )
bbcode_enabled = true
bbcode_text = "OVERALL:"
text = "OVERALL:"
fit_content_height = true
scroll_active = false

[node name="Hints" type="Label" parent="BG2"]
anchor_left = 0.03125
anchor_top = 0.666667
anchor_right = 0.03125
anchor_bottom = 0.73
margin_left = 64.0
margin_top = 232.0
margin_right = 246.0
margin_bottom = 261.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 10 )
text = "Press [R] to try again
Press [Q] to quit"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Borders" type="Polygon2D" parent="."]
color = Color( 1, 0.203922, 0, 1 )
polygon = PoolVector2Array( 8, 64, 48, 24, 320, 24, 288, 64 )

[node name="Hint" type="Label" parent="Borders"]
anchor_left = 0.1875
anchor_top = 1.27666
anchor_right = 0.1875
anchor_bottom = 1.27666
margin_left = 48.0
margin_top = 32.0
margin_right = 230.0
margin_bottom = 58.0
custom_colors/font_color = Color( 1, 0.203922, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "RESULTS!!!"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="BG3" type="Polygon2D" parent="."]
position = Vector2( 600, 0 )
scale = Vector2( 1.4, 1 )
color = Color( 0, 0, 0, 1 )
polygon = PoolVector2Array( -64, 300, -32, 0, 576, 0, 544, 300 )

[node name="NoHit" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -10.0
bus = "SFX"

[node name="Swap" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -10.0
bus = "SFX"

[node name="Neutral" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -10.0
bus = "SFX"

[node name="Wooup" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
volume_db = -10.0
pitch_scale = 0.6
bus = "SFX"

[node name="BGMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -10.0
bus = "Music"

[node name="Tick" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -10.0
bus = "SFX"

[connection signal="timeout" from="BG2/MissCounter/Timer" to="." method="_on_MissTimer_timeout"]
[connection signal="timeout" from="BG2/HPCounter/Timer" to="." method="_on_HPTimer_timeout"]
